# auvora-epic-prep-crm-demo

./: .gitignore
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: ai_agent.py  auth_middleware.py  autonomous_tasks.py  clerk_users.py  crud.py  database.py  db_seed.py  db_utils.py  demo_data.py  email_service.py  exports.py  file_storage.py  main.py  models.py  procare_import.py  rate_limiter.py
frontend/: .env  capacitor.config.ts  package-lock.json  package.json
frontend/android/app/: build.gradle
frontend/ios/App/App.xcodeproj/: project.pbxproj
frontend/src/: App.tsx  index.css
frontend/src/components/: ARAgingReport.tsx  AccountSettings.tsx  AddLeadModal.tsx  AddStudentModal.tsx  AdminDashboard.tsx  AdminRevenueReports.tsx  AdmissionsPipeline.tsx  AdvancedAnalyticsDashboard.tsx  AnnouncementManagement.tsx  ArchiveList.tsx  AskAuvoraWidget.tsx  AttendanceCalendarModal.tsx  AttendanceTakingModal.tsx  AuditLog.tsx  AutonomousTaskManager.tsx  BusinessExpenseTracker.tsx  CampusSwitcher.tsx  CommunicationAutomation.tsx  ConferenceScheduling.tsx  CurriculumBuilder.tsx  DailyBibleVerse.tsx  DashboardWidgets.tsx  DocumentManagement.tsx  EnhancedAdminDashboard.tsx  EnhancedParentDashboard.tsx  EnrollmentChecklist.tsx  EnrollmentForm.tsx  EnrollmentSubmissions.tsx  ErrorBoundary.tsx  EventCommitmentWorkflow.tsx  EventsCalendar.tsx  FeeProductManagement.tsx  FinancialManagement.tsx  FullAccountView.tsx  GradeBreakdownModal.tsx  Header.tsx  HealthRecords.tsx  HelpSupport.tsx  IEP504Management.tsx  IncidentReporting.tsx  (+42 more)
frontend/src/lib/: api.ts
(+5 files in other folders)
